<resources>
    <string name="app_name">EasyDrive</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_pass">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="hint_search">search</string>
    <string name="hint_email">         Email</string>
    <string name="hint_licence">Licence Number</string>
    <string name="hint_pass1">       Password</string>
    <string name="discription">discription</string>
    <string name="hint_name">Username</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="hint_pass2">Confirm Password</string>
    <string name="hint_close">Close</string>
    <string name="hint_got">GOT IT</string>
    <string name="hello">Hello ,</string>

    
    
    <!--strings releated to language-->
    <string name="hello_world">Hello world!</string>
    
    <string name="action_settings">Settings</string>
    
    <string name="option_select">Choose Language</string>
    <string name="emptyString" />

    <string-array name="object_array">

       <item id="@+id/en">English (UK)</item>
        
        <item id="@+id/ru">Russian</item>
        
        <item id="@+id/sk">Slovak</item>
        
        <item id="@+id/ne">Nepali</item>
        

        
    </string-array> -->
    
    <integer-array name="object_image">
        
        <item>@drawable/english</item>
        
        <item>@drawable/russia</item>
        
        <item>@drawable/slovakia</item>
        
        <item>@drawable/nepal</item>
        

        
    </integer-array>
    
</resources>
