<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wall"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:weightSum="1">


        <EditText
            android:id="@+id/TFname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:textColorHint="@color/white"


            />

        <EditText
            android:id="@+id/TFlicence"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle"
            android:hint="@string/hint_licence"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@color/white"


            />

        <EditText
            android:id="@+id/TFemail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@color/white"


            />

        <EditText
            android:id="@+id/TFpass1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle"
            android:hint="@string/hint_pass1"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/white"


            />

        <EditText
            android:id="@+id/TFpass2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle"
            android:hint="@string/hint_pass2"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:textColorHint="@color/white" />

        <!-- Login Button -->

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/Bregister"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:layout_weight="0.10"
            android:background="@drawable/green"
            android:onClick="onRegisterClick"
            android:padding="12dp"
            android:text="@string/btn_register"
            android:textColor="#ffffff"
            android:textStyle="bold" />
        <!-- Link to Login Screen -->


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@null"
            android:onClick="onButtonClick"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"

            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>