<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wall"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.65"
        android:contentDescription="@string/discription"

        app:srcCompat="@drawable/edlogo" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle"
            android:hint="@string/hint_licence"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:textColorHint="@color/white"
            />

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle"
            android:hint="@string/hint_name"
            android:padding="10dp"
            android:inputType="textCapWords"
            android:textColorHint="@color/white"


            />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@color/white"


            />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/white"


            />

        <!-- Login Button -->

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:background="@drawable/green"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/btn_register"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:layout_weight="0.10" />
        <!-- Link to Login Screen -->


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@null"
            android:textColor="@color/white"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"

            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>