<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wall"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:srcCompat="@drawable/edlogo"
        android:contentDescription="@string/discription"

        android:layout_weight="0.83" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/name"
            android:gravity="center_horizontal"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/pass"
            android:gravity="center_horizontal"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/white"

            />

        <!-- Login Button -->

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/red"

            android:padding="12dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/btn_login" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="0.55"
            android:text="@string/btn_link_to_register"

            android:textColor="#ffffff"
            android:gravity="center"/>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/blue"
            android:padding="12dp"

            android:text="@string/btn_register"
            android:textColor="#ffffff"
            android:textStyle="bold" />
        <!-- Link to Login Screen -->

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="326dp"
        android:layout_height="34dp"
        app:srcCompat="@drawable/social"
        android:layout_weight="0.16"
        android:contentDescription="@string/discription"/>


</LinearLayout>