<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/welcomebg">


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:stretchColumns="1"
        >

    <TableRow>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/hello"
        android:textColor="#ddd"
        android:textSize="28sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/TVusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textColor="#ddd"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="@string/emptyString" />

    </TableRow>
    </TableLayout>


    <TextView
    android:id="@+id/welcome_messgae"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/welcome_title"
    android:text="Welcome to Easy Drive.\n\n
This mobile application will help regognize the traffic signals on your way while driving.\n\n
Hold your device steady for the better result. Thanks for choosing us!\n\n Drive Safe  :)"
        android:layout_marginLeft="20dp"
    android:textColor="#ddd"
    android:textSize="18sp" />

    <Button
        android:id="@+id/GIbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="70dp"
        android:background="#3b978d"
        android:onClick="openmain"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/hint_got"
        android:textColor="#fff" />


</LinearLayout>